# Glovebox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  devnotes.md  gsl_span.diff  todo.md
docs/: index.html  index.md  index.pug
docs/css/: custom.css  tbmfw.css
examples/: networking.cpp  networking.h
examples/contacts/: client.cpp  contact.h  server.cpp
examples/fibonacci/: client.cpp  main.cpp  server.cpp  server_parser.cpp  server_parser.h
examples/health/: README.md  client.cpp  data.csv  patient.h  regression.m  server.cpp
examples/keygen/: main.cpp
examples/linreg/: client.cpp  server.cpp
examples/oddeven/: client.cpp  server.cpp
include/: bitvec.h  bitvec_decl.h  compile_time_settings.h  fhe-tools.h  flow-control.h  flow_control.h  glovebox.h  gsl_span_custom.h  parallel.h  primitives.h  serialization.h  structhelper.h  tfhe.h  types.h
include/types/: array.h  fixed.h  fixed32.h  int.h  polynomial.h  string.h  type_ids.h
src/: client.cpp  compile_time_settings.h  debug.cpp  debug.h  fixed32.cpp  flow-control.cpp  flow_control.cpp  polynomial.cpp  primitives.cpp  serialization.cpp  server.cpp  tfhe.cpp  tfhe.h  tfhe_plaintext.cpp  tfhe_tfhev1.cpp  types.cpp  types.h  universal.cpp
src/autogenerated/: add.v  incr_if.v  mul.v
src/types/: fixed32.cpp  int.cpp  polynomial.cpp
tests/: FHEContext.cpp  array.cpp  fixed.cpp  flow_control.cpp  gates.cpp  int.cpp  main.cpp  primitives.cpp  serialization.cpp  string.cpp
tools/verilog-to-glovebox/: README.md  ast.d.ts  index.ts  lifetimes.ts  package-lock.json  package.json  parser.js  renaming.ts  toposort.ts  transpile.sh  tsconfig.json  utils.ts  verilog-grammar.peg
tools/verilog-to-tfhe/: README.md  index.js  index.ts  package.json  parser.js  tfhe.lib  tsconfig.json  verilog-grammar.peg
